# depthai-core-example

./: .gitignore  CMakeLists copy.txt  CMakeLists.txt  Q.xml  Q4k_left.xml  Q4k_rgb.xml  Q4k_right.xml  READMEpx.md
src/: main.cpp  main1Depth ok.cpp  rgb_depth_aligned guia.cpp  rgb_depth_aligned_ref.cpp
